--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
-    <link rel="stylesheet" href="/src/css/about.css" />
+    <link rel="stylesheet" href="src/css/about.css" />
     <title>Sobre</title>
   </head>
   <body>
@@ -76,13 +76,16 @@
               </p>
               <div class="btn-social">
                 <a href=""
-                  ><button class="btn-edit-social"><i class="bi bi-instagram"></i></button
+                  ><button class="btn-edit-social">
+                    <i class="bi bi-instagram"></i></button
                 ></a>
                 <a href=""
-                  ><button class="btn-edit-social"><i class="bi bi-youtube"></i></button
+                  ><button class="btn-edit-social">
+                    <i class="bi bi-youtube"></i></button
                 ></a>
                 <a href=""
-                  ><button class="btn-edit-social"><i class="bi bi-linkedin"></i></button
+                  ><button class="btn-edit-social">
+                    <i class="bi bi-linkedin"></i></button
                 ></a>
               </div>
             </div>
