--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="/src/css/main.css" />
+    <link rel="stylesheet" href="src/css/main.css" />
     <title>Início</title>
   </head>
   <body>
