--- a/register.html
+++ b/register.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/css/register.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Document</title>
   </head>
@@ -15,7 +18,11 @@
     <main class="container">
       <div class="registration-box">
         <div class="photo">
-          <img class="photo" src="/src/image/back-dark-purple.jpg" alt="purple backgroud" />
+          <img
+            class="photo"
+            src="src/image/back-dark-purple.jpg"
+            alt="purple backgroud"
+          />
         </div>
         <div class="form-container">
           <div class="title">
@@ -24,16 +31,28 @@
           <form action="">
             <div class="form-group">
               <label for="email">Email</label>
-              <input type="email"  name="email" id="email" placeholder="Digite seu e-mail">
+              <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="Digite seu e-mail"
+              />
             </div>
             <div class="form-group">
               <label for="motivation">Mensagem</label>
-              <input type="text" name="motivation" id="motivation" placeholder="Digite uma mensagem">
+              <input
+                type="text"
+                name="motivation"
+                id="motivation"
+                placeholder="Digite uma mensagem"
+              />
             </div>
-           <div class="section-end">
-            <button class="form-group btn" type="button"><a href="/index.html">Receber e-book</a></button>
-            <p id="last-mes">Receba o e-book e confira o portifólio</p>
-           </div>
+            <div class="section-end">
+              <button class="form-group btn" type="button">
+                <a href="/index.html">Receber e-book</a>
+              </button>
+              <p id="last-mes">Receba o e-book e confira o portifólio</p>
+            </div>
           </form>
         </div>
       </div>
