--- a/specialties.html
+++ b/specialties.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
-    <link rel="stylesheet" href="/src/css/specialties.css" />
+    <link rel="stylesheet" href="src/css/specialties.css" />
     <title>Especialidades</title>
   </head>
   <body>
